2014-02-17  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix make distcheck.

        * GNUmakefile.list.am: Add missing header files.

2014-02-11  Alberto Garcia  <berto@igalia.com>

        O_CLOEXEC in shm_open does not work on FreeBSD
        https://bugs.webkit.org/show_bug.cgi?id=128572

        Reviewed by Darin Adler.

        The O_CLOEXEC is not supported by shm_open() and is also not
        necessary since FD_CLOEXEC is already set by default when the new
        file descriptor is created.

        * Platform/unix/SharedMemoryUnix.cpp:
        (WebKit::SharedMemory::create):

2014-02-14  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Fix marshaller used in WebKitWebPage::document-loaded signal
        https://bugs.webkit.org/show_bug.cgi?id=128808

        Reviewed by Sergio Villar Senin.

        * WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:
        (webkit_web_page_class_init): Use g_cclosure_marshal_VOID__VOID
        instead of g_cclosure_marshal_VOID__OBJECT.

2014-02-10  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Create the inspector view using the same web process as the inspected page
        https://bugs.webkit.org/show_bug.cgi?id=128539

        Reviewed by Martin Robinson.

        * UIProcess/API/C/gtk/WKView.cpp:
        (WKViewCreate): Pass nullptr as the related page.
        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (webkitWebViewBaseCreate): Add related page argument and pass it
        to webkitWebViewBaseCreateWebPage() instead of nullptr.
        * UIProcess/API/gtk/WebKitWebViewBasePrivate.h:
        * UIProcess/gtk/WebInspectorProxyGtk.cpp:
        (WebKit::WebInspectorProxy::platformCreateInspectorPage): Pass
        m_page as related page to webkitWebViewBaseCreate().

2014-02-10  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GLIB] Add GUniqueOutPtr and use it instead of GOwnPtr
        https://bugs.webkit.org/show_bug.cgi?id=127554
