@@ -619,7 +619,7 @@ static gboolean webkitWebViewBaseKeyPressEvent(GtkWidget* widget, GdkEventKey* e
         case GDK_KEY_Escape:
         case GDK_KEY_f:
         case GDK_KEY_F:
-            webkitWebViewBaseRequestExitFullScreen(webViewBase);
+            priv->pageProxy->fullScreenManager()->requestExitFullScreen();
             return TRUE;
         default:
             break;
@@ -1079,13 +1079,6 @@ void webkitWebViewBaseExitFullScreen(WebKitWebViewBase* webkitWebViewBase)
         gtk_window_unfullscreen(GTK_WINDOW(topLevelWindow));
     fullScreenManagerProxy->didExitFullScreen();
     priv->fullScreenModeActive = false;
-#endif
-}
-
-void webkitWebViewBaseRequestExitFullScreen(WebKitWebViewBase* webkitWebViewBase)
-{
-#if ENABLE(FULLSCREEN_API)
-    webkitWebViewBase->priv->pageProxy->fullScreenManager()->requestExitFullScreen();
 #endif
 }
 
